added new endpoints for translation purposes; added endpoint to edit reviews
